<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


   <!-- Project parent -->
   <parent>
      <groupId>fr.liglab.adele.icasa</groupId>
      <artifactId>platform.parent</artifactId>
      <version>1.1.2-SNAPSHOT</version>
      <relativePath>../../../parent</relativePath>
   </parent>

   <modelVersion>4.0.0</modelVersion>
   <artifactId>application.manager.test</artifactId>
   <name>Application Manager Test</name>

  
   <properties>
      <exam.version>3.0.0</exam.version>
      <url.version>1.5.2</url.version>
   </properties>

  
   <dependencies>
      <dependency>
         <groupId>org.ops4j.pax.exam</groupId>
         <artifactId>pax-exam-container-native</artifactId>
         <version>${exam.version}</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.ops4j.pax.exam</groupId>
         <artifactId>pax-exam-junit4</artifactId>
         <version>${exam.version}</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.ops4j.pax.exam</groupId>
         <artifactId>pax-exam-link-mvn</artifactId>
         <version>${exam.version}</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.ops4j.pax.url</groupId>
         <artifactId>pax-url-aether</artifactId>
         <version>${url.version}</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.ops4j.pax.url</groupId>
         <artifactId>pax-url-wrap</artifactId>
         <version>1.5.2</version>
      </dependency>

      <dependency>
         <groupId>org.apache.felix</groupId>
         <artifactId>org.apache.felix.framework</artifactId>
         <scope>test</scope>
      </dependency>


      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-all</artifactId>
         <version>1.9.5</version>
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-all</artifactId>
         <version>1.9.5</version>         
         <scope>test</scope>
      </dependency>

      <dependency>
         <groupId>org.osgi</groupId>
         <artifactId>org.osgi.compendium</artifactId>
         <scope>test</scope>      
      </dependency>


      <dependency>
         <groupId>fr.liglab.adele.icasa</groupId>
         <artifactId>application.api</artifactId>
         <scope>test</scope>      
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
               <systemPropertyVariables>
                  <ipojo.processing.synchronous>true</ipojo.processing.synchronous>
               </systemPropertyVariables>
            </configuration>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
               <source>1.5</source>
               <target>1.5</target>
            </configuration>
         </plugin>
      </plugins>
   </build>

</project>